@@ -1,3 +1,6 @@
+2016-05-19 Magnus Hagdorn
+ * piccolo2/pplayer.py: add logging
+
 2016-05-18 Magnus Hagdorn
  * piccolo2/player/PlayerApp.py: get list of spectra from selected directory
 
